level0 - section links - fixing chevrons wrapping issue

--- a/styleguide/source/assets/scss/02-molecules/_section-links.scss
+++ b/styleguide/source/assets/scss/02-molecules/_section-links.scss
@@ -52,9 +52,12 @@
     @include ma-reset-list;
   }
 
+  &__item {
+  }
+
   // skip the first item
   &__item + &__item{
-    margin-top: 10px;
+    padding-top: 10px;
   }
 
   &__link {
@@ -63,13 +66,14 @@
 
     span {
       @include ma-chevron;
-      margin-right: -5px;
+      display: inline-block;
+      height: 13px;
+      margin-right: -13px;
+      width: 13px;
 
       &:after {
         border-width: 3px;
         height: 9px;
-        margin-right: -13px;
-        margin-left: 7px;
         opacity: .5;
         width: 9px;
       }
